--- a/exercises/static/style.css
+++ b/exercises/static/style.css
@@ -1,3 +1,44 @@
 body {
-    background: #fcfcfc;
+    background-color: #4C5C5D;
+}
+
+h2 {
+     	
+    text-align: center;
+}
+title {
+	color: green;
+}
+a : link{
+	color: black;
+}
+a : visited{
+ color:purple;
+}
+a : hover{
+	color: green;
+}
+a : active{
+	color: black;
+}
+.up{
+	position: fixed;
+	top: 95%;
+	right: 10px;
+}
+.sidebar{
+	position: absolute;
+	top: 0px;
+	bottom: 0px;
+	right: 0px;
+	left: 5000px;
+	background-color: white;
+	z-index: 100;
+}
+.title{
+	position: absolute;
+	height: 125px;
+	width: 100%;
+	background-color: green;
+	
 }
